force-app/main/default/objects/PowerBI_Report_Mapping__mdt/PowerBI_Report_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>PowerBI Report Mapping</label>
    <pluralLabel>PowerBI Report Mapping</pluralLabel>
</CustomObject>