force-app/main/default/objects/PowerBI_Report_Mapping__mdt/fields/DocgenURL__c.field-meta.xml
<CustomField>
    <fullName>DocgenURL__c</fullName>
    <label>DocgenURL</label>
    <type>TextArea</type>
</CustomField>