force-app/main/default/objects/PowerBI_Report_Mapping__mdt/fields/ObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPI__c</fullName>
    <label>ObjectAPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>