force-app/main/default/objects/PowerBI_Report_Mapping__mdt/fields/Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Report_Id__c</fullName>
    <label>Report Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>