force-app/main/default/objects/PowerBI_Report_Mapping__mdt/fields/WorkspaceName__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceName__c</fullName>
    <label>WorkspaceName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>